--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Beta3 
	- Fixed Now Playing to account for Windows Media Player 11s 
		3 HTTP Requests per song stupidity
	- Added ability to mass tag using play selected functionality
	- Fixed Preferences page, preferences now ordered semi-logically
	- Fixed MPD controller so it displays track numbers correctly
	- Added HttpQ Localplay Module. 
  	- Added 'Best Guess' option to Duplicate Song Disabled that checks
		the shortest, lowest bitrate, smallest of a duplicate set
  	- Removed unused templates and documents
	- Added ability to edit artist/albums and flag all songs under them
		for re-tagging. 
	- Fixed charset of XML documents returned (Thx blueorder)
	- Fixed ORDER BY `track` that was missing on play selected and 
		reduced it to a single query, rather then one per object
	- Fixed ip history being tracked even if disabled in config
	- Improved performance of icon rendering due to increased use
	- Added error handling for if /config/ampache.cfg.php.dist is 
		not readable
	- Added new Icons from http://www.famfamfam.com from the Silk
		subset. (Thx kalrnux && Mark James)

--------------------------------------------------------------------------
  v.3.3.3-Beta2 12/18/2006: 
	- Fixed a bug that prevented adding new songs to the catalog.
	- Removed a upload preference that I missed.
	- Timezone setting actually works


--------------------------------------------------------------------------
  v.3.3.3-Beta1 12/18/2006 
  	- Moved Comment information to seperate table and added lyrics
		row, no support for lyrics yet though.
  	- Removed Upload functionality (broken, and time better spent on
		other features)
  	- Added Recommendations based on Ratings to Stats page