@@ -594,7 +594,6 @@ li.current-rating{
 .np_row {
 	padding-top: 3px;
 	padding-bottom: 3px;
-	display: block;
 }
 .np_cell {
 	margin: 10px;
